--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
+									<!-- 
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									-->
+									<h2><a href="#">Is it true that Boomers earn more than generation X?</a></h2>
+									<p>Using data from U.S. Census Bureau, I go through a typical data analysis workflow to find the answer.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/johnkflam/jlam_portfolio.io/blob/main/Financial%20analysis%20among%20different%20generations.ipynb"
+									class="image main"><img src="images/income_earning.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
