--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
 									<h2><a href="#">Is it true that Boomers earn more than generation X?</a></h2>
 									<p>Using data from U.S. Census Bureau, I go through a typical data analysis workflow to find the answer.</p>
 								</header>
-								<a href="https://github.com/johnkflam/jlam_portfolio.io/blob/main/Financial%20analysis%20among%20different%20generations.ipynb"
-									class="image main"><img src="images/income_earning.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="https://github.com/johnkflam/jlam_portfolio.io/blob/main/Financial%20analysis%20among%20different%20generations.ipynb"
+											class="button large">Link to Notebook</a></li>
 								</ul>
+								<div style="border: 1px solid blue;">
+									<a href="#" class="image main" target="_blank"><img src="images/income_earning.png" alt="" /></a>
+								</div>
 							</article>
 
 						<!-- Posts -->
