--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Python</a></li>
 							<li><a href="sql.html">SQL</a></li>
-							<li><a href="tableau.html">Visualization</a></li>
+							<li><a href="tableau.html">Tableau</a></li>
 						</ul>
 					</nav>
 
