--- a/sql.html
+++ b/sql.html
@@ -31,7 +31,7 @@
 			<ul class="links">
 				<li><a href="index.html">Python</a></li>
 				<li class="active"><a href="sql.html">SQL</a></li>
-				<li><a href="tableau.html">Elements Reference</a></li>
+				<li><a href="tableau.html">Tableau</a></li>
 			</ul>
 			<!-- 
 			<ul class="icons">
