--- a/sql.html
+++ b/sql.html
@@ -52,7 +52,7 @@
 					<!-- 
 					<span class="date">April 25, 2017</span>
 					-->
-					<h2><a href="#">How is the sales department doing?</a></h2>
+					<h2><a href="#">How can we turn data into actionable knowledge?</a></h2>
 					<p>Using advanced SQL features to extract data from SQL Server, and to create Tableua Dashboard to
 						report major KPI.</p>
 				</header>
