--- a/sql.html
+++ b/sql.html
@@ -23,7 +23,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Massively</a>
+			<a href="index.html" class="logo">Jordan Lam</a>
 		</header>
 
 		<!-- Nav -->
