--- a/sql.html
+++ b/sql.html
@@ -57,11 +57,11 @@
 						report major KPI.</p>
 				</header>
 				<ul class="actions special">
-					<li><a href="https://github.com/johnkflam/jlam_portfolio.io/blob/main/Financial%20analysis%20among%20different%20generations.ipynb"
+					<li><a href="https://github.com/jordanklam/jordanlam_portfolio.io/blob/main/sql_queries_wwi.ipynb"
 							class="button large">Link to Notebook</a></li>
 				</ul>
 				<div style="border: 1px solid blue;">
-					<a href="#" class="image main" target="_blank"><img src="images/database_schema.png" alt="" /></a>
+					<a href="#" class="image main" target="_blank"><img src="images/sql_notebook.PNG" alt="" /></a>
 				</div>
 			</article>
 
