--- a/tableau.html
+++ b/tableau.html
@@ -48,11 +48,11 @@
 					<p>Using Tableau to create KPI Dashboard to monitor sales operation</p>
 				</header>
 				<ul class="actions special">
-					<li><a href="https://github.com/johnkflam/jlam_portfolio.io/blob/main/Financial%20analysis%20among%20different%20generations.ipynb"
-							class="button large">Link to Notebook</a></li>
+					<li><a href="https://public.tableau.com/app/profile/jordan2644/viz/WWI_Dashboard_Final/Dashboard1?publish=yes"
+							class="button large">Link to Tableau</a></li>
 				</ul>
 				<div style="border: 1px solid blue;">
-					<a href="#" class="image main" target="_blank"><img src="images/kpi.png" alt="" /></a>
+					<a href="#" class="image main" target="_blank"><img src="images/tableau.PNG" alt="" /></a>
 				</div>
 			</article>
 
